tests/e2e-openshift-upgrade/upgrade/assert-install-tempo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tempo-otlpmetrics
  namespace: chainsaw-upgrade
status:
  availableReplicas: 1
  readyReplicas: 1
  replicas: 1
