tests/e2e-openshift-upgrade/upgrade/assert-metrics-traces-gen.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: chainsaw-otlp-metrics-traces-api
rules:
- apiGroups:
  - monitoring.coreos.com
  resources:
  - prometheuses/api
  verbs:
  - get
  - list
  - watch

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: chainsaw-otlp-metrics-traces-api
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: chainsaw-otlp-metrics-traces-api
subjects:
- kind: ServiceAccount
  name: prometheus-user-workload
  namespace: openshift-user-workload-monitoring

---
apiVersion: batch/v1
kind: Job
metadata:
  name: telemetrygen-traces
  namespace: chainsaw-upgrade
status:
  active: 1
  ready: 1

---
apiVersion: batch/v1
kind: Job
metadata:
  name: telemetrygen-metrics
  namespace: chainsaw-upgrade
status:
  active: 1
  ready: 1

---
apiVersion: v1
kind: Pod
metadata:
  namespace: chainsaw-upgrade
status:
  phase: Running
