tests/e2e-openshift-upgrade/upgrade/assert-otel-target-allocator.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: chainsaw-upgrade
  labels:
    app.kubernetes.io/component: opentelemetry-targetallocator
status:
  containerStatuses:
    - name: ta-container
      ready: true
      started: true
  phase: Running

---
apiVersion: v1
kind: Service
metadata:
  name: simplest-targetallocator
  namespace: chainsaw-upgrade
spec:
  ports:
    - name: targetallocation
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: opentelemetry-targetallocator
  type: ClusterIP
